@@ -36,8 +36,10 @@ sub startup {
     $self->plugin('Config');
     $self->plugin('OpenCloset::Plugin::Helpers');
     $self->plugin('OpenCloset::Volunteer::Plugin::Helpers');
-    $self->secrets( [$ENV{VOLUNTEER_SECRET} || time] );
-    $self->sessions->cookie_name( $self->app->moniker );
+
+    $self->secrets( $self->config->{secrets} );
+    $self->sessions->cookie_domain( $self->config->{cookie_domain} );
+    $self->sessions->cookie_name('opencloset');
     $self->sessions->default_expiration(86400);
 
     $self->_assets;
